--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testcreatenewbranch",
+  "name": "nitingumber_2.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
