--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
